Update style.css: fix image captions overflow
adjust .wp-caption-text to have a max-width: 300px; parameter to keep caption text from spilling into content column despite width of image.

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ address {
 .wp-caption-text {
     margin-bottom: 0;
     text-align: center;
+    max-width: 300px;
 }
 dl {
 
